Alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@
   font-size: 1.5rem;
   text-align: center;
   font-weight: 600;
-  padding-top: 3rem;
+  padding-top: 4rem;
   color: gray;
 }
 .userEmail {
